# KAlignedoscope

./: .gitignore  README.md  pyproject.toml
Data/: Cape_Verde_Alignment.txt
Data/Cape_Verde_Data/: capeverde_K2M1_with_pop.csv  capeverde_K3M1_with_pop.csv  capeverde_K4M1_with_pop.csv  capeverde_K4M2_with_pop.csv  capeverde_K5M1_with_pop.csv  capeverde_K5M2_with_pop.csv  capeverde_K5M3_with_pop.csv
clumpick/: __main__.py  addPopulation.py  convertAligned.py  default_palette.txt  funcs.py  html.py  processFromExternal.py  script.js
kalignedoscope/: __main__.py  addPopulation.py  convertAligned.py  default_palette.txt  funcs.py  html.py  processFromExternal.py  script.js
