[tool.poetry]
name = "KAlignedoscope"
version = "0.2.2"
description = "Interactive Visualization Tool for Clustering Alignment"
authors = ["Avery Guo <avery_guo@brown.edu>", "Xiran Liu"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kalignedoscope" }]
# <- include belongs HERE as an array (not a table)
include = ["kalignedoscope/script.js", "kalignedoscope/default_palette.txt"]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.32.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

